# so.setting

./: CMakeLists.txt  Dependencies.cmake  README.md  example.cpp
include/: setting.hpp
source/: CMakeLists.txt  Dependencies.cmake  setting.cpp
